[package]
name = "monty-pyrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "monty_pyrs"
crate-type = ["cdylib"]

[dependencies]
derive_more = "0.99.17"
num_cpus = "1.13.1"
pyo3 = { version = "0.15.1", features = ["extension-module"] }
rand_core = "0.6.3"
rand_xorshift = "0.3.0"
tinyvec = "1.5.1"
