[package]
name = "monty-pyrs"
version = "0.1.0"
edition = "2018"

[lib]
name = "monty_pyrs"
# cdylib for Python, rlib so we can run tests/benchmarks in Rust-land
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0.99.17"
num_cpus = "1.13.1"
pyo3 = { version = "0.15.1", features = ["extension-module"] }
rand_core = "0.6.3"
rand_xorshift = "0.3.0"
tinyvec = "1.5.1"

[dev-dependencies]
assert_approx_eq = "1.1.0"
